WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255774
REGRESSION(
263118@main
): [GLIB] Always layout if needed after setting the web page size
https://bugs.webkit.org/show_bug.cgi?id=255774
Summary
REGRESSION(263118@main): [GLIB] Always layout if needed after setting the web...
Diego Pino
Reported
2023-04-21 02:46:37 PDT
We were informed several Playwright tests were failing after a recent update. ``` Running 8 tests using 8 workers 1) [webkit] › library/browsercontext-device.spec.ts:62:5 › device › should scroll twice when emulated Error: expect(received).toBe(expected) // Object.is equality Expected: 100 Received: 99 70 | `); 71 | await page.evaluate(() => window.scroll(0, 100)); > 72 | expect(await page.evaluate(() => window.scrollY)).toBe(100); | ^ 73 | 74 | await page.evaluate(() => window.scroll(0, 200)); 75 | expect(await page.evaluate(() => window.scrollY)).toBe(200); at /home/dpino/playwright/tests/library/browsercontext-device.spec.ts:72:55 2) [webkit] › library/browsercontext-device.spec.ts:107:5 › device › should emulate viewport and screen size Error: expect(received).toEqual(expected) // deep equality - Expected - 2 + Received + 2 Object { - "height": 664, - "width": 390, + "height": 780, + "width": 458, } 119 | width: window.innerWidth, 120 | height: window.innerHeight > 121 | }))).toEqual({ width: 390, height: 664 }); | ^ 122 | 123 | await context.close(); 124 | }); at /home/dpino/playwright/tests/library/browsercontext-device.spec.ts:121:10 3) [webkit] › library/browsercontext-device.spec.ts:126:5 › device › should emulate viewport without screen size Error: expect(received).toEqual(expected) // deep equality - Expected - 2 + Received + 2 Object { - "height": 667, - "width": 375, + "height": 777, + "width": 437, } 138 | width: window.innerWidth, 139 | height: window.innerHeight > 140 | }))).toEqual({ width: 375, height: 667 }); | ^ 141 | 142 | await context.close(); 143 | }); at /home/dpino/playwright/tests/library/browsercontext-device.spec.ts:140:10 3 failed [webkit] › library/browsercontext-device.spec.ts:62:5 › device › should scroll twice when emulated [webkit] › library/browsercontext-device.spec.ts:107:5 › device › should emulate viewport and screen size [webkit] › library/browsercontext-device.spec.ts:126:5 › device › should emulate viewport without screen size 2 skipped 3 passed (1.1s) ``` After investigating the tests failures, it seems these tests started failing in
263118@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Diego Pino
Comment 1
2023-04-21 02:51:44 PDT
Pull request:
https://github.com/webkit/webkit/pull/13016
EWS
Comment 2
2023-04-21 02:59:48 PDT
Committed
263225@main
(cce770c3864a): <
https://commits.webkit.org/263225@main
> Reviewed commits have been landed. Closing PR #13016 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-04-21 03:00:21 PDT
<
rdar://problem/108361831
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug