REGRESSION(263118@main): [GLIB] Always layout if needed after setting the web page size https://bugs.webkit.org/show_bug.cgi?id=255774

Reviewed by Carlos Garcia Campos.

'updateGeometry' call requires to update layout after size of page is
set.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:
(WebKit::DrawingAreaCoordinatedGraphics::updateGeometry):

Canonical link: https://commits.webkit.org/263225@main